# triton-rs

./: .gitmodules  Cargo.toml  README.md  log4rs.yml  renderdoc.cap  rustfmt.toml  scratch.txt
.github/workflows/: rust.yml
assets/shaders/basic/: frag.glsl  vert.glsl
assets/shaders/deferred/: ambient.frag  directional.frag  geometry.frag  geometry.vert  point.frag  point.vert
driver/: Cargo.toml
driver/src/: main.rs
game-loop/: Cargo.toml
game-loop/src/: base.rs  helper.rs  time.rs
src/: app.rs  data.rs  frame_system.rs  lib.rs  main-orig.rs  main.rs  mesh.rs  renderer.rs  shaders.rs  triangle_draw_system.rs  ui_state.rs
src/game/: camera.rs  components.rs  context.rs  game.rs  game_loop.rs  input.rs  mod.rs  state.rs
src/game/components/: camera.rs  mod.rs  render.rs  resources.rs  transform.rs
src/game/input/: map.rs  mod.rs  sources.rs  system.rs
src/graphics/: basic_renderer.rs  camera.rs  coordinator.rs  game.rs  helpers.rs  imgui_context.rs  imgui_shader.rs  mesh.rs  mod.rs  render_data.rs  renderer.rs  shaders.rs
src/graphics/imgui/: imgui_renderer.rs  mod.rs
src/imgui/: mod.rs
src/renderer/: frame.rs  frame_system.rs  geometry.rs  geometry_shaders.rs  mesh.rs  mod.rs  pass.rs  render_data.rs  renderer.rs
src/renderer/lighting/: ambient.rs  directional.rs  mod.rs  point.rs
triton/: Cargo.toml
triton/assets/shaders/basic/: frag.glsl
triton/src/: engine.rs  lib.rs
triton/src/framework/: entry.rs  graphics.rs  mod.rs  shaders.rs
