[package]
name = "triton"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[dependencies]
anyhow = "1.0.70"
bytemuck = "*"
cgmath = { version = "0.18" }
log = "0.4.17"
log4rs = "1.2.0"
specs = { version = "0.20.0", features = ["specs-derive"] }
tracing = "0.1.40"
tracy-client = "0.16.4"
tracing-tracy = "0.10.4"
tracing-subscriber = "0.3.18"
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
winit = { version = "0.29.3", features = ["rwh_05"] }

[features]
default = []
tracing = []
