[package]
name = "triton"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[dependencies]
anyhow = "1.0.70"
bytemuck = "*"
egui_winit_vulkano = "0.27.0"
cgmath = { version = "0.18" }
gilrs = { version = "0.10.4", default-features = false, features = ["xinput"] }
log = "0.4.17"
log4rs = "1.2.0"
specs = { version = "0.20.0", features = ["specs-derive"] }

tracing = "0.1.40"
tracy-client = "0.16.4"
tracing-tracy = "0.10.4"
tracing-subscriber = "0.3.18"

vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
vulkano-util = "0.34.0"

winit = { version = "0.28.2" }
winit_input_helper = "0.15.1"

[features]
default = []
tracing = []
