[package]
name = "triton"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
log4rs = "1.2.0"
vulkano = { path = "../vulkano/vulkano" }
vulkano-shaders = { path = "../vulkano/vulkano-shaders"}
vulkano-win = { path = "../vulkano/vulkano-win" }
vulkano-util = { path = "../vulkano/vulkano-util" }
winit = "0.28.3"
